RegisterMenu and ChooseGameModelMenu working with network now